setting language and optimize code again

--- a/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
+++ b/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eShopSolution.Utilities\eShopSolution.Utilities.csproj" />
     <ProjectReference Include="..\eShopSolution.ViewModels\eShopSolution.ViewModels.csproj" />
   </ItemGroup>
 
